# IPGaussianMixtureModels

./: CMakeLists.txt  README.md
src/: gmm_eg  gmm_plot.cpp  main.cpp  test.cpp
